Changed Environments Variables

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # local | prod
-ENV =  local
+ENV =  prod
 
 #GENERAL
 BACKEND_PORT = 3001
@@ -12,7 +12,7 @@ DATABASE_URL=postgres://ifq:Claveifq1!@vps-1831098-x.dattaweb.com:5432/sportripD
 LOCAL_HOST_ENV = localhost
 
 #PROD 
-PROD_HOST_ENV = vps-1879279-x.dattaweb.com
+PROD_HOST_ENV = vps-1831098-x.dattaweb.com
 
 
 
